benchmarks and results reorganised