@@ -27,13 +27,13 @@ public class CollectorsVsStreamToList {
     }
 
     @Benchmark
-    public List<Integer> viaCollectorsParallel() {
-        return data.stream().parallel().collect(Collectors.toList());
+    public List<Integer> viaStream() {
+        return data.stream().toList();
     }
 
     @Benchmark
-    public List<Integer> viaStream() {
-        return data.stream().toList();
+    public List<Integer> viaCollectorsParallel() {
+        return data.stream().parallel().collect(Collectors.toList());
     }
 
     @Benchmark
@@ -44,13 +44,15 @@ public class CollectorsVsStreamToList {
 /*
  * Benchmark                                                                       Mode  Cnt   Score    Error  Units
  * CollectorsVsStreamToList.viaCollectors                                         thrpt   20   6.978 ±  0.012  ops/s
- * CollectorsVsStreamToList.viaCollectorsParallel                                 thrpt   20   2.999 ±  0.003  ops/s
  * CollectorsVsStreamToList.viaStream                                             thrpt   20  18.648 ±  0.632  ops/s
+ * CollectorsVsStreamToList.viaCollectorsParallel                                 thrpt   20   2.999 ±  0.003  ops/s
  * CollectorsVsStreamToList.viaStreamParallel                                     thrpt   20   1.000 ±  0.001  ops/s
+ * <p>
  * CollectorsVsStreamToList.viaCollectors                                          avgt   20   0.143 ±  0.001   s/op
- * CollectorsVsStreamToList.viaCollectorsParallel                                  avgt   20   0.333 ±  0.001   s/op
  * CollectorsVsStreamToList.viaStream                                              avgt   20   0.072 ±  0.001   s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel                                  avgt   20   0.333 ±  0.001   s/op
  * CollectorsVsStreamToList.viaStreamParallel                                      avgt   20   0.953 ±  0.134   s/op
+ * <p>
  * CollectorsVsStreamToList.viaCollectors                                        sample  160   0.132 ±  0.001   s/op
  * CollectorsVsStreamToList.viaCollectors:viaCollectors·p0.00                    sample        0.127            s/op
  * CollectorsVsStreamToList.viaCollectors:viaCollectors·p0.50                    sample        0.132            s/op
@@ -60,15 +62,6 @@ public class CollectorsVsStreamToList {
  * CollectorsVsStreamToList.viaCollectors:viaCollectors·p0.999                   sample        0.153            s/op
  * CollectorsVsStreamToList.viaCollectors:viaCollectors·p0.9999                  sample        0.153            s/op
  * CollectorsVsStreamToList.viaCollectors:viaCollectors·p1.00                    sample        0.153            s/op
- * CollectorsVsStreamToList.viaCollectorsParallel                                sample   80   0.296 ±  0.006   s/op
- * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.00    sample        0.257            s/op
- * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.50    sample        0.297            s/op
- * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.90    sample        0.308            s/op
- * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.95    sample        0.313            s/op
- * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.99    sample        0.363            s/op
- * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.999   sample        0.363            s/op
- * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.9999  sample        0.363            s/op
- * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p1.00    sample        0.363            s/op
  * CollectorsVsStreamToList.viaStream                                            sample  397   0.052 ±  0.001   s/op
  * CollectorsVsStreamToList.viaStream:viaStream·p0.00                            sample        0.050            s/op
  * CollectorsVsStreamToList.viaStream:viaStream·p0.50                            sample        0.052            s/op
@@ -78,6 +71,15 @@ public class CollectorsVsStreamToList {
  * CollectorsVsStreamToList.viaStream:viaStream·p0.999                           sample        0.069            s/op
  * CollectorsVsStreamToList.viaStream:viaStream·p0.9999                          sample        0.069            s/op
  * CollectorsVsStreamToList.viaStream:viaStream·p1.00                            sample        0.069            s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel                                sample   80   0.296 ±  0.006   s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.00    sample        0.257            s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.50    sample        0.297            s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.90    sample        0.308            s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.95    sample        0.313            s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.99    sample        0.363            s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.999   sample        0.363            s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p0.9999  sample        0.363            s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel:viaCollectorsParallel·p1.00    sample        0.363            s/op
  * CollectorsVsStreamToList.viaStreamParallel                                    sample   41   0.549 ±  0.029   s/op
  * CollectorsVsStreamToList.viaStreamParallel:viaStreamParallel·p0.00            sample        0.478            s/op
  * CollectorsVsStreamToList.viaStreamParallel:viaStreamParallel·p0.50            sample        0.533            s/op
@@ -87,8 +89,9 @@ public class CollectorsVsStreamToList {
  * CollectorsVsStreamToList.viaStreamParallel:viaStreamParallel·p0.999           sample        0.757            s/op
  * CollectorsVsStreamToList.viaStreamParallel:viaStreamParallel·p0.9999          sample        0.757            s/op
  * CollectorsVsStreamToList.viaStreamParallel:viaStreamParallel·p1.00            sample        0.757            s/op
+ * <p>
  * CollectorsVsStreamToList.viaCollectors                                            ss   20   0.135 ±  0.002   s/op
- * CollectorsVsStreamToList.viaCollectorsParallel                                    ss   20   0.294 ±  0.012   s/op
  * CollectorsVsStreamToList.viaStream                                                ss   20   0.055 ±  0.003   s/op
+ * CollectorsVsStreamToList.viaCollectorsParallel                                    ss   20   0.294 ±  0.012   s/op
  * CollectorsVsStreamToList.viaStreamParallel                                        ss   20   0.576 ±  0.078   s/op
  */
